[package]
name = "voxel"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]

[dependencies]
cgmath = "0.16.1"
specs = "0.11.1"
fnv = "1"
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "develop" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "voxel_benchmark"
harness = false