[package]
name = "voxel"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]

[dependencies]
cgmath = "0.16.1"
specs = "0.11.1"
fnv = "1"
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "develop" }
soft_time_limit = { path = "../soft_time_limit" }
hibitset = "0.5"
smallvec = "0.6"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "voxel_benchmark"
harness = false