[package]
name = "voxel"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]

[dependencies]
fnv = "1"
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "develop" }
soft_time_limit = { path = "../soft_time_limit" }
hibitset = "0.5"
parking_lot = "0.5"
log = "0.4"
cgmath = "0.16.1"
specs = "0.11.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "voxel_benchmark"
harness = false